Fixes line wrapping

--- a/client/components/gridicon-list/style.scss
+++ b/client/components/gridicon-list/style.scss
@@ -1,10 +1,15 @@
 
-.gridicon-list__item {
-	list-style-type: none;
+.gridicon-list {
+	padding-left: 24px;
 }
 
-.gridicon-list__item-no-icon {
-	margin-left: 24px;
+.gridicon-list__item {
+	list-style-type: none;
+	text-indent: -24px;
+
+	&.gridicon-list__item-no-icon {
+		text-indent: 0;
+	}
 }
 
 .gridicon-list__item-icon {
